<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_margin="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_dialog"
        tools:context=".MainActivity"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_host"
            android:textAppearance="?attr/textAppearanceHeadline6"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hostAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/host_address"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_host_address"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sendPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sending_port"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_send_port"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rcvPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receiving_port"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_rcv_port"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/connectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
